--- a/sources/meta-ess/conf/machine/fpgaioc.conf
+++ b/sources/meta-ess/conf/machine/fpgaioc.conf
@@ -65,7 +65,8 @@ IMAGE_INSTALL_append = " sudo \
                          cct-conf \
                          mrfioc2 \
                          python3-pkgutil \
+                         sis8300 \
                          "
 
-LINUX_VERSION_EXTENSION = "-zynq"
+LINUX_VERSION_EXTENSION = "-fpgaioc"
 
