Enable DHCP for FPGAIOC network interface

--- a/sources/meta-ess/conf/machine/fpgaioc.conf
+++ b/sources/meta-ess/conf/machine/fpgaioc.conf
@@ -57,12 +57,11 @@ IMAGE_INSTALL_append = " sudo \
                          screen \
                          procserv \
                          libtirpc \
+                         fpgaioc-dhcp-conf \
                          dhcp-client \
-                         cct-dhcp-conf \
                          dnf \
                          host-setup \
                          jpeg \
-                         cct-conf \
                          mrfioc2 \
                          python3-pkgutil \
                          sis8300 \
