Update FPGA-IOC recipe to enable initramfs

--- a/sources/meta-ess/conf/machine/fpgaioc.conf
+++ b/sources/meta-ess/conf/machine/fpgaioc.conf
@@ -69,3 +69,7 @@ IMAGE_INSTALL_append = " sudo \
 
 LINUX_VERSION_EXTENSION = "-fpgaioc"
 
+# Initramfs Options 
+INITRAMFS_IMAGE = "fpgaioc-image"
+INITRAMFS_IMAGE_BUNDLE = "1"
+INITRAMFS_MAXSIZE = "84805176"
