--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -183,6 +183,18 @@ build_image_fpgaioc:
   script:
     - . ./setup-env -m fpgaioc -j 8 -t 8
     - bitbake fpgaioc-image
+    - bitbake tar
+    - bitbake zip
+    - bitbake unzip
+    - bitbake bzip2
+    - bitbake python-numpy
+    - bitbake python3-numpy
+    - bitbake gdb
+    - bitbake tiff
+    - bitbake c-blosc
+    - bitbake netcdf-c
+    - bitbake valgrind
+    - bitbake git
     - bitbake package-index
   artifacts:
     paths:
@@ -268,6 +280,16 @@ release_images_tags:
     - jfrog rt upload --flat=false --props="top=true" "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
+    - cd ../../../../
+    - cd build_fpgaioc/tmp/deploy/images/picozed-zynq7 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" boot-images/fpgaioc/$CI_PIPELINE_ID/
+    - cd ../../../../../
+    - cd build_fpgaioc/tmp/deploy/sdk
+    - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
+    - jfrog rt del --recursive=false --props="top=true" --quiet=true "yocto/toolchain/fpgaioc*"
+    - jfrog rt upload --flat=false --props="top=true" "*" yocto/toolchain/
+    - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
+    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
 
 release_images_web:
   variables:
@@ -302,7 +324,7 @@ release_images_web:
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
     - cd ../../../../
-    - cd build_fpgaioc/tmp/deploy/images/picozed-zynq7
+    - cd build_fpgaioc/tmp/deploy/images/picozed-zynq7 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
     - jfrog rt upload --flat=false "*" boot-images/fpgaioc/$CI_PIPELINE_ID/
     - cd ../../../../../
     - cd build_fpgaioc/tmp/deploy/sdk
@@ -365,4 +387,19 @@ release_rpm:
     - cd ../../../../build_cct-rt-64/tmp/deploy/rpm
     - jfrog rt upload --flat=false --exclude-patterns="*kernel-module-tsc-dev*;*kernel-module-tsc-dbg*" "*/kernel-module-tsc-*.rpm" rpm-ics/yocto/cct/ || true
     - jfrog rt upload --flat=false --exclude-patterns="*mrfioc2-dev*;*mrfioc2-dbg*" "*/mrfioc2-*.rpm" rpm-ics/yocto/cct/ || true
-
+    - cd ../../../../build_fpgaioc/tmp/deploy/rpm/
+    - jfrog rt upload --flat=false --exclude-patterns="*i2c-slave-miniioc-dev*;*i2c-slave-miniioc-dbg*" "*/i2c-slave-miniioc-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false "*/kernel-module-i2c-slave-miniioc-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*tar-dev*;*tar-dbg*" "*/tar-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*zip-dev*;*zip-dbg*" "*/zip-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*unzip-dev*;*unzip-dbg*" "*/unzip-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*bzip2-dev*;*bzip2-dbg*" "*/bzip2-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/python3-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*" "*/perl-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*gdb-dev*;*gdb-dbg*;*gdbserver*" "*/gdb-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*" "*/libtiff*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*" "*/c-blosc-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dbg-*" "*/netcdf-c-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*;*-staticdev-*" "*/valgrind-*.rpm" rpm-ics/yocto/fpgaioc/ || true
+    - jfrog rt upload --flat=false --exclude-patterns="*-dev-*;*-dbg-*;*-doc-*;*-perltools-*" "*/git-*.rpm" rpm-ics/yocto/fpgaioc/ || true
