Add rescue image recipe. Add bootnet command to u-boot to boot RAMFS from network.

--- a/sources/meta-ess/conf/machine/fpgaioc.conf
+++ b/sources/meta-ess/conf/machine/fpgaioc.conf
@@ -21,53 +21,30 @@ SPL_BINARY ?= "spl/boot.bin"
 UBOOT_ELF_zynq = "u-boot"
 
 EXTRA_IMAGEDEPENDS += " \
-                u-boot-zynq-uenv \
-                virtual/boot-bin \
-                virtual/bootloader \
-                "
+                        u-boot-zynq-uenv \
+                        virtual/boot-bin \
+                        virtual/bootloader \
+                        "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "device-tree"
 
 IMAGE_BOOT_FILES += " \
-                boot.bin \
-                uEnv.txt \
-                "
+                     boot.bin \
+                     uEnv.txt \
+                     "
 
-IMAGE_INSTALL_append = " sudo \
-                         polkit \
-                         eth-config \
-                         nfs-utils \
-                         readline \
-                         boost \
-                         curl \
-                         libxml2 \
-                         zlib \
-                         libpng \
-                         nano \
-                         tree \
-                         perl \
-                         perl-module-posix \
-                         coreutils \
-                         sysfsutils \
-                         sysklogd \
-                         kmod \
-                         kernel-modules \
-                         sysstat \
-                         pciutils \
-                         screen \
-                         procserv \
-                         libtirpc \
-                         fpgaioc-dhcp-conf \
-                         dhcp-client \
-                         dnf \
-                         host-setup \
-                         jpeg \
-                         python3-pkgutil \
-                         "
+IMAGE_INSTALL_append += " sudo \
+                          openssh-sftp-server \ 
+                          e2fsprogs-e2fsck e2fsprogs-mke2fs e2fsprogs-tune2fs e2fsprogs-badblocks e2fsprogs-resize2fs \
+                          coreutils \
+                          dosfstools \
+                          i2c-tools \
+                          dhcp-client \  
+                          fpgaioc-dhcp-conf \
+                          "
 
 LINUX_VERSION_EXTENSION = "-fpgaioc"
 
-# Initramfs Options 
+## Initramfs Options 
 INITRAMFS_IMAGE = "fpgaioc-image"
-INITRAMFS_IMAGE_BUNDLE = "1"
-INITRAMFS_MAXSIZE = "84805176"
+INITRAMFS_MAXSIZE = "44805176"
