U-Boot: Enable SPI in U-Boot
    Enable PS7-SPI0 in devicetree
    Include sspi command and modify to allow setting frequency
    Enable devmem in Linux via busybox

--- a/sources/meta-ess/recipes-bsp/device-tree/files/picozed-zynq7.dts
+++ b/sources/meta-ess/recipes-bsp/device-tree/files/picozed-zynq7.dts
@@ -88,3 +88,13 @@
 &qspi {
 	status = "disabled";
 };
+
+&spi0 {
+	status = "okay";
+    SY87739L@0{
+        compatible="spidev";
+    	reg = <0>; //chipselect 0
+    	spi-max-frequency= <250000>;
+    };
+};
+
