--- a/sources/meta-ess/recipes-kernel/linux/linux-xlnx/fragments.cfg
+++ b/sources/meta-ess/recipes-kernel/linux/linux-xlnx/fragments.cfg
@@ -1,6 +1,8 @@
 CONFIG_IKCONFIG_PROC=y
 CONFIG_I2C_SLAVE=y
 CONFIG_I2C_SLAVE_EEPROM=y
+CONFIG_SPI_MASTER=y
+CONFIG_SPI_SPIDEV=y
 CONFIG_DEBUG_LL=y
 CONFIG_DEBUG_ZYNQ_UART0=y
 CONFIG_DEBUG_LL_INCLUDE="debug/zynq.S"
