--- a/sources/meta-ess/recipes-bsp/u-boot/files/zynq-picozed.dts
+++ b/sources/meta-ess/recipes-bsp/u-boot/files/zynq-picozed.dts
@@ -70,6 +70,8 @@
 };
 
 &spi0 {
-    u-boot,dm-pre-reloc;
     status = "okay";
+    spi-max-frequency = <5000000>; /* Max frequency (Hz) */
+    spi-activate-delay = <1>; /* Time delay between activating chip-select and starting clock (uS) */
+    spi-deactivate-delay = <1>; /* Time delay between stopping clock and de-activating chip-select (uS) */
 };
