--- a/sources/meta-ess/recipes-kernel/linux/linux-xlnx/fragments.cfg
+++ b/sources/meta-ess/recipes-kernel/linux/linux-xlnx/fragments.cfg
@@ -3,6 +3,8 @@ CONFIG_I2C_SLAVE=y
 CONFIG_I2C_SLAVE_EEPROM=y
 CONFIG_SPI_MASTER=y
 CONFIG_SPI_SPIDEV=y
+CONFIG_I2C_MUX_PCA9541=y
+CONFIG_RTC_DRV_ABX80X=y
 CONFIG_DEBUG_LL=y
 CONFIG_DEBUG_ZYNQ_UART0=y
 CONFIG_DEBUG_LL_INCLUDE="debug/zynq.S"
