Add support for Rev.E of the carrier
Add support for the Silicon Labs si5332 PLL (replaces si5346)

--- a/sources/meta-ess/recipes-bsp/device-tree/files/picozed-zynq7.dts
+++ b/sources/meta-ess/recipes-bsp/device-tree/files/picozed-zynq7.dts
@@ -88,9 +88,9 @@
             #address-cells = <1>;
             #size-cells = <0>;
             reg = <0>;
-            si5346@6f {
-                compatible = "linux,si5346";
-                reg = <0x6f>;
+            si5333@6a {
+                compatible = "linux,si5332";
+                reg = <0x6a>;
             };
         };
 
