--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -284,14 +284,14 @@ release_images_tags:
     - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
     - cd ../../../../
     - cd build_fpgaioc/tmp/deploy/images/picozed-zynq7 && echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
-    - jfrog rt upload --flat=false "*" boot-images/fpgaioc/$CI_PIPELINE_ID/
+    - jfrog rt upload --flat=false "*" boot-images/fpgaioc/$CI_COMMIT_TAG/
     - cd ../../../../../
     - cd build_fpgaioc/tmp/deploy/sdk
     - for f in *; do filename=${f%.*}; ext=${f##*.}; mv $f "${filename}-${CI_COMMIT_SHORT_SHA}.${ext}" ; done
     - jfrog rt del --recursive=false --props="top=true" --quiet=true "yocto/toolchain/fpgaioc*"
     - jfrog rt upload --flat=false --props="top=true" "*" yocto/toolchain/
     - echo $CI_COMMIT_SHA > SHA-$CI_COMMIT_SHA
-    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_PIPELINE_ID/
+    - jfrog rt upload --flat=false "*" yocto/toolchain/$CI_COMMIT_TAG/
 
 release_images_web:
   variables:
