Compile python3 pyepics module
Add recipe to compile pyepics module for python3, and make available in package repository.
Also include required module (python3-setuptools).

Shared objects for cct / qoriq architectures are included to replace those provided by
the pyepics sources.

Pyepics sources are patched to prevent non-relevant architectures from compiling.

[ICSHWI-5525]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,6 +124,7 @@ build_image_cct:
     - bitbake vim
     - bitbake gcc
     - bitbake make
+    - bitbake python3-pyepics
     - bitbake package-index
   artifacts:
     paths:
