--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ build_image:
     - bitbake vim
     - bitbake gcc
     - bitbake make
+    - bitbake python3-pyepics
     - bitbake package-index
   artifacts:
     paths:
@@ -204,6 +205,7 @@ build_image_fpgaioc:
     - bitbake netcdf-c
     - bitbake valgrind
     - bitbake git
+    - bitbake python3-pyepics
     - bitbake package-index
   artifacts:
     paths:
