--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -78,6 +78,7 @@ IMAGE_INSTALL_append = " sudo \
                          python3-multiprocessing \
                          python3-pkgutil \
                          sis8300 \
+                         ethercat \
                          "
 
 LINUX_VERSION_EXTENSION = "-cct"
