Add python3-runpy and python3-multiprocessing to base rootfs
Requirement for running Ansible

[ICSHWI-4883]

--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -74,6 +74,8 @@ IMAGE_INSTALL_append = " sudo \
                          jpeg \
                          cct-conf \
                          mrfioc2 \
+                         python3-runpy \
+                         python3-multiprocessing \
                          python3-pkgutil \
                          sis8300 \
                          "
