--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -57,6 +57,8 @@ IMAGE_INSTALL_append = " i2c-tools \
                          jpeg \
                          i2c-udev-rules \
                          python3-pkgutil \
+                         python3-runpy \
+                         python3-multiprocessing \
                          "
 IMAGE_INSTALL_remove = " udev-rules-qoriq"
 BBMASK = " lxc"
