--- a/sources/meta-ess/conf/machine/cct-64.conf
+++ b/sources/meta-ess/conf/machine/cct-64.conf
@@ -79,6 +79,7 @@ IMAGE_INSTALL_append = " sudo \
                          python3-pkgutil \
                          sis8300 \
                          ethercat \
+                         sssd \                         
                          "
 
 LINUX_VERSION_EXTENSION = "-cct"
