--- a/sources/meta-ess/conf/machine/ifc14xx-64b.conf
+++ b/sources/meta-ess/conf/machine/ifc14xx-64b.conf
@@ -25,6 +25,7 @@ USE_VT ?= "0"
 
 IMAGE_INSTALL_append = " i2c-tools \
                          eth-config \
+                         sssd \
                          fmc \
                          nfs-utils \
                          readline \
