Add PicoZed target for EtherLAB EtherCAT master module
Split existing recipe into two:
 * One recipe for the kernel modules
 * One recipe for the userspace tools

This avoids issues with compilation due to the arm target using
two different cross-compilers for the kernel modules, and regular
recipes.

[ICSHWI-6724]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -210,6 +210,8 @@ build_image_fpgaioc:
     - bitbake git
     - bitbake python3-pyepics
     - bitbake conserver
+    - bitbake ethercat
+    - bitbake ehtercat-tools
     - bitbake package-index
   artifacts:
     paths:
