--- a/sources/meta-ess/recipes-kernel/linux/linux-xlnx/fragments.cfg
+++ b/sources/meta-ess/recipes-kernel/linux/linux-xlnx/fragments.cfg
@@ -13,3 +13,6 @@ CONFIG_EARLY_PRINTK=y
 CONFIG_NFSD=y
 CONFIG_AUTOFS4_FS=y
 CONFIG_COMMON_CLK_SI5351=y
+CONFIG_PHYLIB=y
+CONFIG_DP83848_PHY=y
+CONFIG_GENERIC_PHY=y
